--- a/HTTP5101_School_System/HTTP5101_School_System.csproj
+++ b/HTTP5101_School_System/HTTP5101_School_System.csproj
@@ -14,7 +14,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HTTP5101_School_System</RootNamespace>
     <AssemblyName>HTTP5101_School_System</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
@@ -24,6 +24,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -62,13 +63,11 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Management" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
@@ -100,6 +99,7 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
@@ -122,12 +122,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ClassCrud.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\style.css" />
+    <Content Include="Content\styleNew.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -141,6 +143,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Layout.Master" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="ListClasses.aspx" />
     <Content Include="ListStudents.aspx" />
     <Content Include="ListTeachers.aspx" />
     <Content Include="Scripts\bootstrap.js" />
@@ -171,13 +174,24 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="ShowClass.aspx" />
     <Content Include="ShowStudent.aspx" />
+    <Content Include="ShowTeacher.aspx" />
+    <Content Include="StudentCRUD.aspx" />
+    <Content Include="TeacherCrud.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="ClassCrud.aspx.cs">
+      <DependentUpon>ClassCrud.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ClassCrud.aspx.designer.cs">
+      <DependentUpon>ClassCrud.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -187,6 +201,13 @@
     </Compile>
     <Compile Include="Layout.Master.designer.cs">
       <DependentUpon>Layout.Master</DependentUpon>
+    </Compile>
+    <Compile Include="ListClasses.aspx.cs">
+      <DependentUpon>ListClasses.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ListClasses.aspx.designer.cs">
+      <DependentUpon>ListClasses.aspx</DependentUpon>
     </Compile>
     <Compile Include="ListStudents.aspx.cs">
       <DependentUpon>ListStudents.aspx</DependentUpon>
@@ -204,12 +225,40 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SCHOOLDB.cs" />
+    <Compile Include="ShowClass.aspx.cs">
+      <DependentUpon>ShowClass.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ShowClass.aspx.designer.cs">
+      <DependentUpon>ShowClass.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ShowStudent.aspx.cs">
       <DependentUpon>ShowStudent.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ShowStudent.aspx.designer.cs">
       <DependentUpon>ShowStudent.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ShowTeacher.aspx.cs">
+      <DependentUpon>ShowTeacher.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ShowTeacher.aspx.designer.cs">
+      <DependentUpon>ShowTeacher.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="StudentCRUD.aspx.cs">
+      <DependentUpon>StudentCRUD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="StudentCRUD.aspx.designer.cs">
+      <DependentUpon>StudentCRUD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherCrud.aspx.cs">
+      <DependentUpon>TeacherCrud.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TeacherCrud.aspx.designer.cs">
+      <DependentUpon>TeacherCrud.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
